# Yggy

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SECURITY.md  docker-compose.automation.yml  docker-compose.https.yml  docker-compose.lan.yml  pytest.ini
automation-api/: .dockerignore  Dockerfile  README.md  pyproject.toml
automation-api/app/: audit.py  auth.py  config.py  database.py  main.py  models.py  policy.py  schemas.py
automation-api/app/routers/: approvals.py  capabilities.py  capability_gaps.py  capability_implementation_runs.py  capability_proposals.py  channels.py  health.py  maintenance.py  notifications.py  (+8 more)
automation-api/ops-ui/: index.html  package-lock.json  package.json  vite.config.ts
automation-api/tests/: conftest.py  test_approval_flow.py  test_approval_notifications.py  test_capability_gaps.py  test_capability_gateway.py  test_capability_implementation_harness.py  test_capability_implementation_runner.py  test_capability_implementation_runs.py  test_capability_proposals.py  test_channel_events.py  test_channel_notifications.py  test_compose_security.py  test_discord_service.py  test_health.py  test_n8n_workflow_stub.py  test_openapi.py  test_ops.py  test_policy.py  test_registry_scripts.py  test_research.py  test_retention.py  test_run_dedupe.py  test_runs.py  test_source_proposals.py  test_task_archive.py  test_task_change_notifications.py  test_task_change_proposals.py  test_task_config_versions.py  test_task_template_api.py  test_task_templates.py  test_task_validation.py
automation-worker/: Dockerfile  README.md  pyproject.toml
automation-worker/tests/: test_backup_verification.py  test_discord_client.py  test_fetch_clients.py  test_llm_client.py  test_n8n_webhook.py  test_printer_supply_status.py  test_scheduler.py  test_server_health.py  test_tls_certificate_expiry.py  test_topic_digest.py  test_worker_main.py
automation-worker/worker/: __init__.py  main.py  scheduler.py  source_registry.py
bragi/: Dockerfile  README.md  pyproject.toml
bragi/bragi/: __init__.py  clarifier_api.py  goal_loop.py  goal_models.py  goal_prompts.py  goal_router.py  hermes_client.py  intake_store.py  main.py  memory_store.py
bragi/tests/: test_bragi.py  test_goal_clarifier.py  test_goal_router.py
channel-bridge/: Dockerfile  README.md  pyproject.toml
channel-bridge/bridge/: __init__.py  audit_client.py  bragi_client.py  config.py  discord_runtime.py  main.py
channel-bridge/tests/: test_audit_client.py  test_bragi_client.py  test_config.py
metrics-exporter/: Dockerfile  README.md  pyproject.toml
metrics-exporter/exporter/: __init__.py  config.py  main.py
metrics-exporter/tests/: test_metrics_exporter.py
(+138 files in other folders)
