[project]
name = "yggy-automation-api"
version = "0.1.0"
description = "Policy-enforced automation API for Yggy"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "SQLAlchemy>=2.0",
    "PyMySQL>=1.1",
    "PyYAML>=6.0",
    "croniter>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
