[project]
name = "yggy-automation-worker"
version = "0.1.0"
description = "Bounded automation worker for Yggy"
requires-python = ">=3.12"
dependencies = [
    "croniter>=2.0",
    "httpx>=0.27",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["worker*"]
